--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "mongoos": "^0.0.1-security",
     "mongoose": "^8.2.2",
-    "next": "^14.1.2",
-    "next-auth": "^4.24.11",
+    "next": "14.1.2",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
