--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.2.2",
-    "next": "14.1.2",
+    "mysql2": "^3.11.5",
+    "next": "^14.2.20",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
